refactor : 필터링 및 루트 변경, deleteFile 메서드 보강 http import문 재생성